# mcp-codemode

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.runner  LICENSE  Makefile  README.md  docker-compose.yml  go.work  go.work.sum  main.py  pyproject.toml  script.py
.github/workflows/: release-agent.yml  tag-go-module.yml
agent/: README.md  go.mod  go.sum  main.go  setup.sh
agent-proto/: go.mod  go.sum
agent-proto/pb/: agent.pb.go  agent_grpc.pb.go
agent-proto/proto/: agent.proto
agent/config/: config.go
agent/constants/: contants.go
agent/core/: environment.go
agent/core/common/: common.go  common_test.go
agent/core/interceptors/: interceptors.go
agent/heartbeat/: heartbeat.go
agent/pb/: agent.pb.go  agent_grpc.pb.go
agent/proto/: agent.pb.go  agent.proto
agent/server/: server.go
agent/setup/: environment.go
agent/states/: container_status.go  containers.go
agent/telemetry/: telemetry.go
agent/types/: types.go
client/: agent.py  config.py  log.py  main.py  proxy.py  pyproject.toml
coderunner/: .dockerignore  Dockerfile  README.md  go.mod  go.sum  main.go
coderunner/app/: app.go  mcp_app.go
coderunner/config/: config.go
coderunner/constants/: constants.go
coderunner/core/common/: common.go  requests.go
coderunner/core/docker/: docker.go
coderunner/core/handlers/: handlers.go  handlers_test.go  runner.go
coderunner/middlewares/: logging.go
coderunner/states/: containers.go
core/: dependencies.py
load-test/loader/: README.md  long-form.js  mixed-ramp.js  mixed-soak.js  results.txt  smoke.js
pkg/: go.mod  go.sum
pkg/tools/: github.go
pyrunner/: Dockerfile  Dockerfile.codemode  README.md  config.py  log.py  main.py  middleware.py  pyproject.toml
pyrunner/agent_orchestration/: __init__.py  agent_states.py  models.py  registry.py  supervisor_agent.py
pyrunner/agent_orchestration/static_agents/: __init__.py  documentation_agent.py  github_agent.py
pyrunner/core/: sandbox.py
pyrunner/core/types/: agent.py  container.py  schemas.py
pyrunner/tests/: conftest.py  test_supervisor_agent.py
pyrunner/tools/: __init__.py  execute_code.py  file_ops.py
pyrunner/tools/registry/: __init__.py  common.py  github_tools.py  graph_tools.py
tasks/: get_containers.py
tools/registry/: arithimetic.py  code_interpreter.py
web/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml
(+25 files in other folders)
