[project]
name = "mcp-codemode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "docker>=7.1.0",
    "fastapi>=0.128.5",
    "llm-sandbox[docker]>=0.3.31",
    "mcp>=1.25.0",
    "uvicorn>=0.40.0",
]
