[project]
name = "mcp-codemode"
version = "0.1.0"
description = "MCP-enhanced code execution workspace"
requires-python = ">=3.12"
dependencies = [
	"logfire[fastapi,httpx]>=4.25.0",
	"mcp-codemode-client",
	"mcp-codemode-server",
	"pre-commit>=4.5.1",
]

[tool.uv.workspace]
members = ["client", "pyrunner"]

[tool.uv.sources]
mcp-codemode-client = { workspace = true }
mcp-codemode-server = { workspace = true }

[tool.ruff]
line-length = 90

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
